--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-jupyterlab
-numpy==1.18.2
+jupyterlab==2.1.5
+numpy==1.19.0
+pandas==1.0.5
+matplotlib==3.2.2
 scikit-learn==0.23.1
-pandas==1.0.3
-matplotlib==3.2.1
